# nesprep

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.cursor/rules/: ai-agent-development.mdc  clean-code.mdc  frontend.mdc  shift-planning.mdc
app/: __init__.py  config.py
app/agent_websocket/: __init__.py  main.py
app/agent_websocket/consts/: __init__.py  events.py  messages.py
app/agent_websocket/events/: __init__.py  event_emitter.py
app/agent_websocket/handlers/: __init__.py  chat_handler.py  planning_handler.py
app/agents/: __init__.py  base_agent.py  constraint_analyzer.py  json_shift_planner.py  json_validator.py  planning_chat_agent.py  shift_planner.py  validator.py
app/api/: main.py
app/auth/: __init__.py  dependencies.py  jwt.py  password.py
app/consts/: __init__.py  models.py
app/dal/: __init__.py  base.py
app/prompts/: __init__.py  constraint_analyzer_prompts.py  json_shift_planner_prompts.py  planning_chat_prompts.py  shift_planner_prompts.py  validator_prompts.py
app/tools/: __init__.py  constraint_tools.py  csv_tools.py  excel_tools.py  log_tools.py  planning_chat_tools.py
app/utils/: __init__.py  csv_template_generator.py  excel_helpers.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
scripts/: setup-venv.sh  test_auth.py  test_csv_generator.py  test_json_planner.py
templates/: shift_template.xlsx
tests/: test_chat_flow.py  test_full_flow.py  test_march_plan.py  test_runner.py  test_websocket.py
(+67 files in other folders)
