[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "nesprep"
version = "0.1.0"
description = "AI-powered shift planning agent with WebSocket communication"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langchain>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=14.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
nesprep = "tests.test_runner:main_sync"
nesprep-ws = "app.agent_websocket.main:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]
ignore = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
